comments text smaller, border for visibility, alignment fixes

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -25,7 +25,8 @@
 .text-background {
   background-color: $light-blue;
   padding: 10px;
-  margin-left: 20px;
+  border: 0.5px solid $blue;
+  border-radius: 5px;
 }
 
 .event-name-show {
@@ -80,15 +81,25 @@
   padding: 2px 10px;
   color: white;
 }
+
 .level-orange {
   background: $orange;
   border-radius: 10px;
   padding: 2px 10px;
   color: white;
 }
+
 .level-red {
   background: $red;
   border-radius: 10px;
   padding: 2px 10px;
   color: white;
+}
+
+.smaller-h2 {
+  font-size: 22px;
+}
+
+.smaller-title {
+  font-size: 28px;
 }
